css/style.css
/* ================================= 
  Base Element Styles
==================================== */

* {
  box-sizing: border-box;
}

body {
  font-family: "Helvetica Neue", "Helvetica", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* ================================= 
  Base Layout Styles
==================================== */

/* ---- Navigation ---- */

/* ---- Layout Containers ---- */
.container {
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.center {
  width: 100%;
  height: 100%;
}

/* ---- Page Elements ---- */

body {
  font-family: "Helvetica Neue","Helvetica", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 500;
  line-height: 1.6em;
  background: #fff;
}

.quote-card {
  position: relative;
  width: 100%;
  padding: 5px;
  min-height: 200px;
  background: #f67944;
  border-radius: 6px;
  text-align: center;
  position: relative;
  z-index: 1000;
  top: 50%;
  transform: translateY(-50%);
  -webkit-transition: background 0.17s, left 0.8s ease-out;
  transition: background 0.17s, left 0.8s ease-out;
  -webkit-transition: left 0.4s ease-out;
  transition: left 0.4s ease-out;
}

.new {
  left: 100vw;
}

.deleting {
  left: -100%;
}

.quote-card:hover, .quote-card:focus {
  background: #444;
}

.box-shadow {
  -webkit-box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.2);
  -moz-box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.2);
  box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.2);
}

.text-shadow {
  text-shadow: 3px 3px 3px rgba(0,0,0,0.2);
}
 
blockquote {
  font-size: 1.8em;
  font-weight: bold;
  color: #fff;
  margin: 15px;
  line-height: 1.3em;
}

.quote-author {
  float: right;
  color: #fff;
  text-align: right;
  font-style: italic;
  margin-top: -15px;
  margin-right: 30px;
}

.twitter-logo {
  color: #fff;
  font-size: 2em;
  position: absolute;
  bottom: 6px;
  left: 10px;
  -webkit-transition: 0.17s;
  transition: 0.17s;
}

.quote-card:hover .twitter-logo, quote-card:focus .twitter-logo {
  color: #0084b4;
}

.twitter-logo:hover, .twitter-logo:focus {
  transform: scale(1.2);
}


/* ================================= 
  Media Queries
==================================== */

@media (min-width: 399px) {
  .quote-card {
    max-width: 400px;
    margin: 0 auto;
  }
}

@media (min-width: 769px) {

}

/* =================================
   Utility Classes
   ================================= */

.clearfloat {
  content: "";
  display: table;
  clear: both;
}

.invisible {
  visibility: hidden;
}

* {
  background: #000 !important;
  color: #0f0 !important;
  outline: solid #f00 1px !important;
}

